--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -15,20 +15,20 @@
                             <div class="card-body p-4">
                                 
                                 <div class="text-center w-75 m-auto">
-                                    <h4 class="text-dark-50 text-center pb-0 fw-bold">Iniciar Sesion</h4>
-                                    <p class="text-muted mb-4">ingrese su correo y contraseña</p>
+                                    <h4 class="text-dark-50 text-center pb-0 fw-bold">Iniciar sesión</h4>
+                                    <p class="text-muted mb-4">Ingrese su correo y contraseña</p>
                                 </div>
 
                                 <form action="/signin" method="POST">
 
                                     <div class="mb-3">
-                                        <label for="emailaddress" class="form-label">correo</label>
+                                        <label for="emailaddress" class="form-label">Correo</label>
                                         <input class="form-control" name="correo"  type="email" id="emailaddress" required="" placeholder="ingrese su correo">
                                     </div>
 
                                     <div class="mb-3">
                                       
-                                        <label for="password" class="form-label">contraseña</label>
+                                        <label for="password" class="form-label">Contraseña</label>
                                         <div class="input-group input-group-merge">
                                             <input type="password" name="password" id="password" class="form-control" placeholder="ingrese su contraseña">
                                             <div class="input-group-text" data-password="false">
@@ -38,7 +38,7 @@
                                     </div>
 
                                     <div class="mb-3 mb-0 text-center">
-                                        <button class="btn btn-primary" type="submit">Iniciar Sesion </button>
+                                        <button class="btn btn-primary" type="submit">Iniciar sesión </button>
                                     </div>
 
                                 </form>
@@ -48,7 +48,7 @@
 
                         <div class="row mt-3">
                             <div class="col-12 text-center">
-                                <p class="text-muted">Aun no ah activado su Cuenta? <a href="/signup" class="text-muted ms-1"><b>Active su cuenta</b></a></p>
+                                <p class="text-muted">¿Aún no ha activado su cuenta? <a href="/signup" class="text-muted ms-1"><b>Active su cuenta</b></a></p>
                             </div> <!-- end col -->
                         </div>
                         <!-- end row -->
