--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -16,21 +16,21 @@
                                 
                                 <div class="text-center w-75 m-auto">
                                     <h4 class="text-dark-50 text-center mt-0 fw-bold">Completa el registro</h4>
-                                    <p class="text-muted mb-4">Si ya tienes un registro previo completa tu registro creando tu credencial de acceso </p>
+                                    <p class="text-muted mb-4">Si ya tienes un registro previo completa tu registro creando tu credencial de acceso.</p>
                                 </div>
 
                                 <form action="/signup" method="POST">
 
 
                                     <div class="mb-3">
-                                        <label for="emailaddress" class="form-label">Correo Elecronico</label>
-                                        <input class="form-control" name="correo" type="email" id="emailaddress" required placeholder="Ingresa tu Correo">
+                                        <label for="emailaddress" class="form-label">Correo electrónico</label>
+                                        <input class="form-control" name="correo" type="email" id="emailaddress" required placeholder="Ingresa tu correo">
                                     </div>
 
                                     <div class="mb-3">
                                         <label for="password" class="form-label">Contraseña</label>
                                         <div class="input-group input-group-merge">
-                                            <input type="password" name="password" id="password" class="form-control" placeholder="Ingresa tu Contraseña">
+                                            <input type="password" name="password" id="password" class="form-control" placeholder="Ingresa tu contraseña">
                                             <div class="input-group-text" data-password="false">
                                                 <span class="password-eye"></span>
                                             </div>
@@ -40,7 +40,7 @@
 
 
                                     <div class="mb-3 text-center">
-                                        <button class="btn btn-primary" type="submit"> Inscribirse </button>
+                                        <button class="btn btn-primary" type="submit"> Activar cuenta </button>
                                     </div>
 
                                 </form>
@@ -50,7 +50,7 @@
 
                         <div class="row mt-3">
                             <div class="col-12 text-center">
-                                <p class="text-muted">Ya tiene cuenta? <a href="signin" class="text-muted ms-1"><b>Ingresar</b></a></p>
+                                <p class="text-muted">¿Ya tienes cuenta? <a href="signin" class="text-muted ms-1"><b>Ingresar</b></a></p>
                             </div> <!-- end col-->
                         </div>
                         <!-- end row -->
