--- a/src/views/PAT-035/LandingPage.hbs
+++ b/src/views/PAT-035/LandingPage.hbs
@@ -16,7 +16,7 @@
                 <!-- menus -->
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
-                    <!-- left menu -->
+                    <!-- 
                     <ul class="navbar-nav me-auto align-items-center">
                         <li class="nav-item mx-lg-1">
                             <a class="nav-link active" href="">Inicio</a>
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="">Contacto</a>
                         </li>
                     </ul>
-
+                    left menu -->
                     <!-- right menu -->
                     <ul class="navbar-nav ms-auto align-items-center">
                         <li class="nav-item me-0">
@@ -103,7 +103,7 @@
                 <div class="row mt-1">
                     <div class="col-lg-4 col-md-6">
                         <div class="demo-box text-center mt-3">
-                            <img src="assets/images/layouts/layout-1.png" alt="demo-img"
+                            <img src="images/layouts/layout-7.jpg" alt="demo-img"
                                 class="img-fluid shadow-sm rounded">
                             <h5 class="mt-3 f-17">Pagina de Inicio</h5>
                         </div>
@@ -111,7 +111,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="demo-box text-center mt-3">
-                            <img src="assets/images/layouts/layout-2.png" alt="demo-img"
+                            <img src="images/layouts/img8.jpg" alt="demo-img"
                                 class="img-fluid shadow-sm rounded">
                             <h5 class="mt-3 f-17">Seccion de empleados</h5>
                         </div>
@@ -119,15 +119,15 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="demo-box text-center mt-3">
-                            <img src="assets/images/layouts/layout-3.png" alt="demo-img"
+                            <img src="images/layouts/img10.png" alt="demo-img"
                                 class="img-fluid shadow-sm rounded">
-                            <h5 class="mt-3 f-17">Seccion de resultados</h5>
+                            <h5 class="mt-3 f-17">Seccion para Generar reportes</h5>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6">
                         <div class="demo-box text-center mt-3">
-                            <img src="assets/images/layouts/layout-5.png" alt="demo-img"
+                            <img src="images/layouts/img9.png" alt="demo-img"
                                 class="img-fluid shadow-sm rounded">
                             <h5 class="mt-3 f-17">Seccion de resultados generales</h5>
                         </div>
@@ -135,7 +135,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="demo-box text-center mt-3">
-                            <img src="assets/images/layouts/layout-6.png" alt="demo-img"
+                            <img src="images/layouts/img11.png" alt="demo-img"
                                 class="img-fluid shadow-sm rounded">
                             <h5 class="mt-3 f-17">Personaliza tus datos</h5>
                         </div>
@@ -143,7 +143,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="demo-box text-center mt-3">
-                            <img src="assets/images/layouts/layout-4.png" alt="demo-img"
+                            <img src="images/layouts/img12.png" alt="demo-img"
                                 class="img-fluid shadow-sm rounded">
                             <h5 class="mt-3 f-17">Ve en tiempo real cuantas encuestas <br> han sido realizadas</h5>
                         </div>
@@ -160,7 +160,7 @@
                     <div class="col-lg-12">
                         <div class="text-center">
                             <h1 class="mt-0"><i class="mdi mdi-tag-multiple"></i></h1>
-                            <h3>Choose Simple <span class="text-primary">Pricing</span></h3>
+                            <h3>Elige un simple <span class="text-primary">Precio</span></h3>
                             <p class="text-muted mt-2">The clean and well commented code allows easy customization of the
                                 theme.It's designed for
                                 <br>describing your app, agency or business.</p>
